--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.0
-Date: xx.xx.2021
+Date: 12.11.2021
   Info:
     - Release
