--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.1
+Date: 12.12.2022
+  Changes:
+    - Changed description and formulas
+---------------------------------------------------------------------------------------------------
 Version: 0.1.0
-Date: 12.11.2021
+Date: 12.12.2022
   Info:
     - Release
