--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.2
+Date: 13.12.2022
+  Changes:
+    - improved performance of recursive functions:
+      - implemented new function for Fibonacci
+      - implemented new function for custom parameters
+    - scaled down "Miserable Spoon" coefficient because it eas too hard
+    - added more settings for customization
+---------------------------------------------------------------------------------------------------
 Version: 0.1.1
 Date: 12.12.2022
   Changes:
