--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.3
+Date: 09.02.2023
+  Changes:
+    - Allowed custom parameters to be double instead of int for better fine tuning
+    - Allowed decreasing exponents for depths
+  Fixes:
+    - Fixed exp function executing always the square value
+    - Fixed cutom parameters not being applied correctly
+---------------------------------------------------------------------------------------------------
 Version: 0.1.2
 Date: 13.12.2022
   Changes:
